# zieds

./: .travis.yml  CMakeLists.txt  README.md  build.sh
include/: bloom_filter.h
src/: bloom_filter.c  example.c  hashes.c  hashes.h  test.c
